removed row margins, edited special banner on mobile and non mobile, fixed mobile menu, centered ccn header links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,16 +73,15 @@ a:hover,
 }
 
 .row {
+  margin: 0;
+}
+
+.row-spacing {
   margin: 30px 0;
 }
 
 .navbar {
   margin-bottom: 0;
-}
-
-.navbar-inner {
-  display: flex;
-  justify-content: space-between;
 }
 
 .navbar-inner a {
@@ -116,7 +115,7 @@ a:hover,
   font-size: 12px;
   line-height: 20px;
   margin: 0;
-  padding: 25px 15px;
+  padding: 15px;
   text-transform: uppercase;
 }
 
@@ -124,7 +123,7 @@ a:hover,
 .navbar-nav li .active:hover,
 .navbar-nav li a:focus,
 .navbar-nav li a:hover {
-  background: white;
+  background: transparent;
   color: #AAAAAA;
 }
 
@@ -305,41 +304,48 @@ footer a:hover {
   column-count: 2;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 919px) {
+  #sermon h2 {
+    font-size: 70px;
+  }
 }
 
-@media (max-width: 991px) {
+@media (min-width: 768px) {
+  .navbar-nav {
+    float: right !important;
+  }
 }
 
 @media (max-width: 768px) {
   #sermon h2 {
-    font-size: 70px;
+    font-size: 28px;
+    border-bottom-width: 10px;
   }
 
-  #conference .quote {
+  #conference p.quote {
     font-size: 22px;
     padding: 30px 0;
+  }
+
+  #conference h2.quote {
+    font-size: 22px;
+    padding: 30px 0 0 0;
   }
 
   .two-column {
     column-count: 1;
   }
-}
 
-@media (min-width: 768px) {
+  #conference .nav {
+    text-align: center;
+  }
 }
 
 @media (max-width: 414px) {
   #sermon .layover {
     padding: 30px;
   }
-
-  #sermon h2 {
-    font-size: 28px;
-    border-bottom-width: 10px;
-  }
 }
-
 
 #conference .navbar-nav .register {
   padding: 5px 0;
@@ -367,4 +373,19 @@ footer a:hover {
 
 .navbar li .special sup {
   font-weight: normal;
+}
+
+.row .special {
+  background: #704122;
+  color: #FFFFFF;    
+  display: block;
+  font-size: 20px;
+  margin: 30px 0;
+  height: 30px;
+  text-align: center;
+}
+
+.row .special:hover {
+  background: #FCB400;
+  color: #FFFFFF;
 }
